fix spacing on side menus

--- a/wp-content/themes/responsive/style.css
+++ b/wp-content/themes/responsive/style.css
@@ -1470,7 +1470,8 @@ form div {
 	border:1px solid #d6d6d6;
 	border-radius:6px; 
 	font-size:13px;
-	margin:0 0 20px;
+	margin: 20px;
+	padding: 10px;
 }
 
 #twitter-sidebar {
